compilation.out
Executing the C code of file './material/code-generation-tests/OK_GER06.c'
7 1 2 3 4 5 6 7
7 1 2 3 4 5 6 7 
Error when compiling the C code of file './material/code-generation-tests/OK_GER13.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER13.c: In function ‘_A_set’:
./material/code-generation-tests/OK_GER13.c:53:22: error: lvalue required as left operand of assignment
   53 |     FALTAIMPLEMENTAR = _pn;
      |                      ^
./material/code-generation-tests/OK_GER13.c: At top level:
./material/code-generation-tests/OK_GER13.c:125:5: error: unknown type name ‘_class_Program’
  125 |     _class_Program _program;
      |     ^~~~~~~~~~~~~~
./material/code-generation-tests/OK_GER13.c: In function ‘_Program_run’:
./material/code-generation-tests/OK_GER13.c:166:12: warning: comparison of distinct pointer types lacks a cast
  166 |     if (_a == _b ) {
      |            ^~
./material/code-generation-tests/OK_GER13.c:170:12: warning: comparison of distinct pointer types lacks a cast
  170 |     if (_b == _a ) {
      |            ^~
./material/code-generation-tests/OK_GER13.c:178:22: error: lvalue required as left operand of assignment
  178 |     FALTAIMPLEMENTAR = new_Program();
      |                      ^
Executing the C code of file './material/code-generation-tests/OK_GER01.c'
7 0 1 2 3 4 5 6 7
7 0 1 2 3 4 5 6 7 
Executing the C code of file './material/code-generation-tests/OK_GER02.c'
6 1 2 3 4 5 6
6 1 2 3 4 5 6 
Executing the C code of file './material/code-generation-tests/OK_GER03.c'
6 1 2 3 4 5 6
6 1 2 3 4 5 6 
Executing the C code of file './material/code-generation-tests/OK_GER04.c'
61 2 3 4 5 6
61 2 3 4 5 6 
Executing the C code of file './material/code-generation-tests/OK_GER05.c'

Ok-ger05
The output should be what you give as input.
Type in six numbers
Executing the C code of file './material/code-generation-tests/OK_GER07.c'
0
0
Executing the C code of file './material/code-generation-tests/OK_GER08.c'
1 1 2 2 3 3 4 5 6 7
1 1 2 2 3 3 4 5 6 7 
Executing the C code of file './material/code-generation-tests/OK_GER09.c'
Error when executing the code generated by the C compiler (exit code 139)
Error when compiling the C code of file './material/code-generation-tests/OK_GER10.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER10.c: In function ‘_A_m1’:
./material/code-generation-tests/OK_GER10.c:51:22: error: lvalue required as left operand of assignment
   51 |     FALTAIMPLEMENTAR = 1;
      |                      ^
./material/code-generation-tests/OK_GER10.c: In function ‘_B_m2’:
./material/code-generation-tests/OK_GER10.c:80:22: error: lvalue required as left operand of assignment
   80 |     FALTAIMPLEMENTAR = 2;
      |                      ^
Executing the C code of file './material/code-generation-tests/OK_GER11.c'
